# verodb

./: .gitignore  CMakeLists.txt  README.md  main.c
engine/: CMakeLists.txt  aof.c  aof.h  main.c  query.c  query.h  storage.c  storage.h  verodb
engine/query/: query.c  query.h
engine/storage/: storage.c  storage.h
engine/usage/: client.py
indexing/: CMakeLists.txt
indexing/src/: indexing.c  indexing.h
integration/: CMakeLists.txt
integration/src/: integration.c
query/: CMakeLists.txt
query/src/: query.c
schema/src/: schema.c
security/: CMakeLists.txt
security/src/: security.c
storage/: CMakeLists.txt
storage/src/: storage.c  storage.h
utils/: CMakeLists.txt
utils/src/: utils.c
